[refactor] reformat code